Fix a bug that made the project images overflow their container

--- a/css/styles.css
+++ b/css/styles.css
@@ -167,6 +167,7 @@ PROJECTS
   width: 100%;
   height: 100%;
   max-height: 400px;
+  overflow: hidden;
 }
 
 .project:hover {
@@ -186,8 +187,8 @@ PROJECTS
 }
 
 .project img {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -220,6 +221,7 @@ PROJECTS
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: minmax(auto, 300px) auto auto;
+    /* gap: 1rem; */
   }
 
   #first-project {
